# jp-eli-mcp

./: .gitignore  .mcp.json.example  CONSTITUTION.md  DISCOVERY.md  Dockerfile  README.md  pyproject.toml  server.json
.github/workflows/: release.yml
runtime/: jp-runtime.json
src/jp_eli_mcp/: __init__.py  __main__.py  audit.py  cache.py  citations.py  client.py  models.py  runtime.py  server.py
tests/: test_instructions_drift.py  test_smoke.py
