[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jp-eli-mcp"
version = "0.1.2"
description = "MCP server for Japan's e-Gov law search API (laws.e-gov.go.jp) — search, fetch, and cite national legislation by law_id and article."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "japan", "e-gov", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "diskcache>=5.6",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/jp-eli-mcp"
Issues = "https://github.com/matematicsolutions/jp-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
jp-eli-mcp = "jp_eli_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jp_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# INSTRUCTIONS is a long-form operational prose string shown to the LLM; also carries
# Japanese full-width punctuation in citation examples (RUF001 ambiguous-character checks).
"src/jp_eli_mcp/server.py" = ["E501", "RUF001", "RUF003"]
# Japanese literals (viewer strings, fixtures) trip RUF001/RUF002 ambiguous-character checks
"src/jp_eli_mcp/citations.py" = ["RUF001", "RUF002", "RUF003"]
"tests/*" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["diskcache.*", "fastmcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
